# practice

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
.github/workflows/: c-cpp.yml
inc/cf/: base.h  water_melon.h
inc/misc/: seven_number.h
solutions/cf/: base.h  bit_plus_plus.h  boy_or_girl.h  domino_piling.h  horse_shoe.h  next_round.h  perfect_permutation.h  petya_and_strings.h  team.h  water_melon.h  way_too_long_word.h
solutions/cf/strings/: boy_or_girl.h  petya_and_strings.h  way_too_long_word.h
solutions/code_forces/: Makefile
solutions/code_forces/a/: Makefile  bit_plus_plus.cc  domino_piling.cc  perfect_permutation.cc  petya_and_strings.cc  team.cc
solutions/code_forces/b/: Makefile  queue_at_the_school
solutions/misc/: seven_number.h
sources/: CMakeLists.txt
sources/algorithms/: CMakeLists.txt  bubble_sort.cc  maximum_subarray.cc  merge_sort.cc  string_search.cc
sources/algorithms/misc/: CMakeLists.txt  bubble_sort.cc  insertion_sort.cc  maximum_subarray.cc  merge_sort.cc  string_search.cc
sources/codeforces/112/: a.cc
sources/codeforces/1359/: b.cc
sources/codeforces/1406/: a.cc  b.cc
sources/codeforces/1419/: a.cc  b.cc  c.cc  d1.cc  d2.cc
sources/codeforces/1420/: a.cc  b.cc
sources/codeforces/1492/: a.cc  b.cc
sources/codeforces/1493/: a.cc  b.cc
sources/codeforces/1494/: CMakeLists.txt  a.cc  b.cc
sources/codeforces/1509/: b.cc
sources/codeforces/1529/: b.cc
sources/codeforces/158/: a.cc
sources/codeforces/1919/: CMakeLists.txt  b.cc
sources/codeforces/1920/: a.cc
sources/codeforces/228/: a.cc
sources/codeforces/231/: a.cc
sources/codeforces/233/: a.cc
sources/codeforces/236/: a.cc
sources/codeforces/266/: b.cc
sources/codeforces/282/: a.cc
sources/codeforces/4/: a.cc
sources/codeforces/50/: a.cc
sources/codeforces/71/: a.cc
sources/codeforces/a/: 2023.cc  CMakeLists.txt  abc_string.cc  cubes_sortings.cc  satisfying_constraints.cc  three_swimmers.cc  water_melon.cc
sources/codeforces/b/: CMakeLists.txt  card_deck.cc  sifid_and_strange_subsequences.cc  stairs.cc  tmt_document.cc
sources/codeforces/c/: CMakeLists.txt
sources/codeforces/d/: CMakeLists.txt  sage_birthday_hard.cc
sources/interviews/: CMakeLists.txt  axon.cc  seven_number.cc  what3words.cc
sources/misc/: axon.cc
src/cf/: water_melon.cc
src/code_forces/a/: .gitignore  Makefile  boy_or_girl.cc  next_round.cc
src/code_forces/b/: Makefile  new_theatre_square.cc  queue_at_the_school.cc
src/misc/: .gitignore  Makefile  seven_muber.cc  seven_number.cc
srcs/algorithms/: insertion_sort.cc  maximum_subarray.cc
srcs/code_forces/: Makefile
srcs/code_forces/a/: anti_knapsack.cc  digit_game.cc  horse_shoe.cc  perfect_permutation.cc  way_too_long_word.cc
srcs/code_forces/b/: berland_crossword.cc  planet_lapituletti.cc  rock_and_lever.cc
srcs/code_forces/round_670/: maximum_product.cc
srcs/code_forces/round_670_div2/: Makefile  subset_mex.cc
srcs/code_forces/round_671_div2/: digit_game.cc  killjoy.cc  sage_birthday_easy.cc  sage_birthday_hard.cc
srcs/misc/: axon.cc
test/cf/: bit_plus_plus.cc  boy_or_girl.cc  domino_piling.cc  horse_shoe.cc  next_round.cc  perfect_permutation.cc  petya_and_strings.cc  team.cc  water_melon.cc  way_too_long_word.cc
test/cf/strings/: boy_or_girl.cc  petya_and_strings.cc  way_too_long_word.cc
tests/: CMakeLists.txt
tests/code_forces/: Makefile
tests/code_forces/a/: Makefile  bit_plus_plus.cc  boy_or_girl.cc  cubes_sortings.cc  define.h  digit_game.cc  domino_piling.cc  horse_shoe.cc  next_round.cc  perfect_permutation.cc  petya_and_strings.cc  team.cc  three_swimmers.cc  water_melon.cc  way_too_long_word.cc
tests/code_forces/b/: .gitignore  Makefile  define.h  new_theatre_square.cc  queue_at_the_school.cc  stairs.cc
tests/code_forces/c/: Makefile  define.h  killjoy.cc
tests/code_forces/d/: Makefile  define.h  sage_birthday_easy.cc  sage_birthday_hard.cc
tests/code_forces/round_670/: Makefile  define.h  subset_mex.cc
tests/code_forces/round_670_div2/: Makefile  define.h  maximum_product.cc
tests/code_forces/round_671_div2/: Makefile  define.h
tests/codeforces/: CMakeLists.txt
tests/codeforces/112/: a.cc
tests/codeforces/1359/: a.cc
tests/codeforces/1406/: a.cc  b.cc
tests/codeforces/1419/: a.cc  b.cc  c.cc  d1.cc  d2.cc
tests/codeforces/1420/: a.cc  b.cc
tests/codeforces/1492/: a.cc  b.cc
tests/codeforces/1493/: a.cc  b.cc
tests/codeforces/1494/: a.cc  b.cc
tests/codeforces/1509/: b.cc
tests/codeforces/1529/: b.cc
tests/codeforces/158/: a.cc
tests/codeforces/1916/: a.cc
tests/codeforces/1919/: b.cc
tests/codeforces/1920/: CMakeLists.txt  a.cc
tests/codeforces/228/: a.cc
tests/codeforces/231/: a.cc
tests/codeforces/233/: a.cc
tests/codeforces/236/: a.cc
tests/codeforces/266/: CMakeLists.txt  b.cc
tests/codeforces/282/: a.cc
tests/codeforces/4/: a.cc
tests/codeforces/50/: a.cc
tests/codeforces/71/: a.cc
tests/codeforces/a/: 2023.cc  CMakeLists.txt  bit_plus_plus.cc  boy_or_girl.cc  cubes_sortings.cc  digit_game.cc  domino_piling.cc  horse_shoe.cc  next_round.cc  perfect_permutation.cc  petya_and_strings.cc  satisfying_constraints.cc  subset_mex.cc  team.cc  three_swimmers.cc  water_melon.cc  way_too_long_word.cc
tests/codeforces/b/: CMakeLists.txt  maximum_product.cc  new_theatre_square.cc  plus_minus_split.cc  queue_at_the_school.cc  sifid_and_strange_subsequences.cc  stairs.cc
tests/codeforces/c/: CMakeLists.txt  killjoy.cc
tests/codeforces/d/: CMakeLists.txt  sage_birthday_easy.cc  sage_birthday_hard.cc
tests/misc/: CMakeLists.txt  Makefile  define.h  seven_number.cc
utils/: system.h
