# solutions
add_executable(2023 ${CMAKE_CURRENT_SOURCE_DIR}/2023.cc)
add_executable(team ${CMAKE_CURRENT_SOURCE_DIR}/team.cc)
add_executable(abc-string ${CMAKE_CURRENT_SOURCE_DIR}/abc_string.cc)
add_executable(horse-shoe ${CMAKE_CURRENT_SOURCE_DIR}/horse_shoe.cc)
add_executable(next-round ${CMAKE_CURRENT_SOURCE_DIR}/next_round.cc)
add_executable(digit-game ${CMAKE_CURRENT_SOURCE_DIR}/digit_game.cc)
add_executable(subset-mex ${CMAKE_CURRENT_SOURCE_DIR}/subset_mex.cc)
add_executable(boy-or-girl ${CMAKE_CURRENT_SOURCE_DIR}/boy_or_girl.cc)
add_executable(water-melon ${CMAKE_CURRENT_SOURCE_DIR}/water_melon.cc)
add_executable(anti-knapsack ${CMAKE_CURRENT_SOURCE_DIR}/anti_knapsack.cc)
add_executable(bit-plus-plus ${CMAKE_CURRENT_SOURCE_DIR}/bit_plus_plus.cc)
add_executable(domino-piling ${CMAKE_CURRENT_SOURCE_DIR}/domino_piling.cc)
add_executable(cubes-sortings ${CMAKE_CURRENT_SOURCE_DIR}/cubes_sortings.cc)
add_executable(three-swimmers ${CMAKE_CURRENT_SOURCE_DIR}/three_swimmers.cc)
add_executable(petya-and-strings ${CMAKE_CURRENT_SOURCE_DIR}/petya_and_strings.cc)
add_executable(way-too-long-word ${CMAKE_CURRENT_SOURCE_DIR}/way_too_long_word.cc)
add_executable(perfect-permutation ${CMAKE_CURRENT_SOURCE_DIR}/perfect_permutation.cc)
