# tests
add_executable(team-test ${CMAKE_CURRENT_SOURCE_DIR}/team.cc)
# add_executable(abc-string-test ${CMAKE_CURRENT_SOURCE_DIR}/abc_string.cc)
add_executable(horse-shoe-test ${CMAKE_CURRENT_SOURCE_DIR}/horse_shoe.cc)
add_executable(next-round-test ${CMAKE_CURRENT_SOURCE_DIR}/next_round.cc)
add_executable(digit-game-test ${CMAKE_CURRENT_SOURCE_DIR}/digit_game.cc)
add_executable(subset-mex-test ${CMAKE_CURRENT_SOURCE_DIR}/subset_mex.cc)
add_executable(boy-or-girl-test ${CMAKE_CURRENT_SOURCE_DIR}/boy_or_girl.cc)
add_executable(water-melon-test ${CMAKE_CURRENT_SOURCE_DIR}/water_melon.cc)
# add_executable(anti-knapsack-test ${CMAKE_CURRENT_SOURCE_DIR}/anti_knapsack.cc)
add_executable(bit-plus-plus-test ${CMAKE_CURRENT_SOURCE_DIR}/bit_plus_plus.cc)
add_executable(domino-piling-test ${CMAKE_CURRENT_SOURCE_DIR}/domino_piling.cc)
add_executable(cubes-sortings-test ${CMAKE_CURRENT_SOURCE_DIR}/cubes_sortings.cc)
add_executable(three-swimmers-test ${CMAKE_CURRENT_SOURCE_DIR}/three_swimmers.cc)
add_executable(petya-and-strings-test ${CMAKE_CURRENT_SOURCE_DIR}/petya_and_strings.cc)
add_executable(way-too-long-word-test ${CMAKE_CURRENT_SOURCE_DIR}/way_too_long_word.cc)
add_executable(perfect-permutation-test ${CMAKE_CURRENT_SOURCE_DIR}/perfect_permutation.cc)
